fixed project view alignment

--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 /* common elements */
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'Ubuntu';
+  font-family: 'Ubuntu', sans-serif;
   font: #3c3c3c;
 }
 
@@ -76,7 +76,7 @@ div.section-background {
 
 /* Project */
 
-div.card.large {
+/*div.card.large {
   padding: 10px;
   padding-left: 22px;
   margin: 0 auto;
@@ -97,39 +97,34 @@ div.card.large {
 
 #large-paragraph {
   overflow: scroll;
+}*/
+
+.project-content {
+  margin-top: -2vh;
 }
 
 #carousel-container {
-  height: 40%;
+/*  max-height: 400px;*/
   width: 100%;
 }
 
 .image-container {
   width: 100%;
-  height: 100%;
+/*  max-height: 400px;*/
 }
 
 #carousel-image-container {
-  max-height: 100%;
+  /*max-height: 100%;*/
+  /*max-height: 400px;*/
+  width: 100%;
 }
 
 .carousel-image {
-  max-height: 100%;
-  max-width: 100%;
-}
-
-.fa-chevron-right {
-  position: absolute;
-  left: 30vh;
-  bottom: 25vh;
- /* position: relative;
-  bottom: 25vh;
-  left: 35vh;*/
-}
-
-.fa-chevron-left {
-/*  position: relative;
-  bottom: 25vh;*/
+/*  max-height: 100%;
+  max-width: 100%;*/
+  padding-top: 10px;
+  max-height: 475px;
+  width: 100%;
 }
 
 /* Card */
